# CPPHDL

./: CMakeLists.txt  License.txt  README.md
src/: CMakeLists.txt  port.hpp
src/core/: CMakeLists.txt  connection.hpp  design.hpp  entity.hpp  type.hpp
src/parser/: CMakeLists.txt  main.cpp
